plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'checkstyle'
    id 'com.google.cloud.tools.jib' version '3.4.0'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'mready'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'io.livekit:livekit-server:0.12.0'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Database
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'

    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-redis-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-oauth2-client-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-websocket-test'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'

    //AWS SDK
    implementation 'software.amazon.awssdk:s3:2.41.14'
    implementation 'software.amazon.awssdk:auth:2.41.14'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'


}

tasks.named('test') {
    useJUnitPlatform()
}

// plain jar 파일 생성되지 않도록
jar {
    enabled = false
}

checkstyle {
    toolVersion = '10.12.4'
    configFile = file('config/checkstyle/mready-checkstyle-rules.xml')
    configProperties = [
            'suppressionFile': 'config/checkstyle/mready-checkstyle-suppressions.xml'
    ]
    sourceSets = [sourceSets.main]
    ignoreFailures = false
    maxWarnings = 0
    maxErrors = 0
}

checkstyleMain {
    source = 'src/main/java'
}

checkstyleTest {
    source = 'src/test/java'
}

jib {
    from {
        image = 'eclipse-temurin:25-jre'
    }
    to {
        image = "${System.env.DOCKERHUB_REPO}"
        tags = [System.getenv('BUILD_NUMBER') ?: 'local', 'latest']
    }
    container {
        creationTime = 'USE_CURRENT_TIMESTAMP'
        jvmFlags = [
            '-XX:+UseContainerSupport',
            '-XX:InitialRAMPercentage=60.0',
            '-XX:MaxRAMPercentage=70.0',
            '-XX:+UseG1GC',
            '-XX:MaxGCPauseMillis=100',
            '-XX:+UseStringDeduplication',
            '-Djdk.virtualThreadScheduler.parallelism=2',
            '-Djdk.virtualThreadScheduler.maxPoolSize=128',
            '-XX:MetaspaceSize=128M',
            '-XX:MaxMetaspaceSize=256M',
            '-Xlog:gc*:file=/app/logs/gc.log:time,level,tags:filecount=3,filesize=5M',
            '-XX:+HeapDumpOnOutOfMemoryError',
            '-XX:HeapDumpPath=/app/logs/heapdump.hprof',
            '-XX:+ExitOnOutOfMemoryError',
            '-Djava.security.egd=file:/dev/./urandom',
            '-Duser.timezone=UTC'
        ]
    }

    extraDirectories {
        paths {
            path {
                from = file('build/logs') // 로컬에 빈 디렉토리가 있어야 함
                into = '/app/logs'
            }
        }
    }
}